# release-notes-generator

./: .gitignore  README.md  pyproject.toml
src/: cli.py  parser.py  renderer.py
